--- a/mountmedia.desktop
+++ b/mountmedia.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=true
-Exec=./mountmedia.sh
+Exec=echo It looks like something went wrong with the installation script. Replace this with the "bash " and then the path to the sh file.
 Icon=x
 Categories=Settings;Accessories;
+Name=Mount Media
