--- a/mountmedia.desktop
+++ b/mountmedia.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Exec=bash /home/aarik/Desktop/mountmedia/mountinit.sh
-Icon=/home/aarik/Desktop/mountmedia/hdd.png
+Exec=echo It looks like something went wrong with the installation script. Just replace this with "sh " and then the path to the mountinit.sh file.
+Icon=x
 Categories=Settings;Accessories;
 Name=Mount Media
